force-app/main/default/objects/Account/fields/Account_Assignment_Group__c.field-meta.xml
<CustomField>
    <fullName>Account_Assignment_Group__c</fullName>
    <label>Account Assignment Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Domestic Revenues</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Foreign Revenues</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>Affiliat Comp Revenu</label>
            </value>
            <value>
                <fullName>Z1</fullName>
                <default>true</default>
                <label>GTM General</label>
            </value>
            <value>
                <fullName>Z2</fullName>
                <label>Other operating</label>
            </value>
            <value>
                <fullName>Z3</fullName>
                <label>Related party--Monte</label>
            </value>
            <value>
                <fullName>Z4</fullName>
                <label>External customers-M</label>
            </value>
            <value>
                <fullName>Z5</fullName>
                <label>Group customers-Mont</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>