force-app/main/default/objects/Account/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <label>Activity</label>
    <length>40</length>
    <type>Text</type>
</CustomField>