force-app/main/default/objects/Account/fields/Actual_Sales_Income_Ratio_N_1_Year__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Income_Ratio_N_1_Year__c</fullName>
    <inlineHelpText>The proportion of Hisense sales amount of customer total sales amount in last year.</inlineHelpText>
    <label>Actual Sales Income Ratio(N - 1 Year)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>