force-app/main/default/objects/Account/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>If the address information is not in English, please convert to the English alphabet. Thank you.</inlineHelpText>
    <label>Address (English)</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>