force-app/main/default/objects/Account/fields/Address_Text__c.field-meta.xml
<CustomField>
    <fullName>Address_Text__c</fullName>
    <label>Address Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>