force-app/main/default/objects/Account/fields/Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Address_Type__c</fullName>
    <label>Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>注册地址</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>送货地址</label>
            </value>
            <value>
                <fullName>03</fullName>
                <label>发票邮寄地址</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>发货地址</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>