force-app/main/default/objects/Account/fields/Annual_Revenue_Scale__c.field-meta.xml
<CustomField>
    <fullName>Annual_Revenue_Scale__c</fullName>
    <label>Annual Revenue Scale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>