force-app/main/default/objects/Account/fields/Attribute2__c.field-meta.xml
<CustomField>
    <fullName>Attribute2__c</fullName>
    <label>Attribute2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>03</fullName>
                <label>Government (PA)</label>
            </value>
            <value>
                <fullName>04</fullName>
                <label>RUC (PA)</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Personal ID (PA)</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>PassportOrForeignID</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>End Consumer (PA)</label>
            </value>
            <value>
                <fullName>2A</fullName>
                <label>Attribute 2A</label>
            </value>
            <value>
                <fullName>2B</fullName>
                <label>Attribute 2B</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>