force-app/main/default/objects/Account/fields/Automatic_updates__c.field-meta.xml
<CustomField>
    <fullName>Automatic_updates__c</fullName>
    <defaultValue>false</defaultValue>
    <description>是否自动更新信用额度</description>
    <label>Automatic updates</label>
    <type>Checkbox</type>
</CustomField>