force-app/main/default/objects/Account/fields/Avaliable_Credit_Limit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Avaliable_Credit_Limit_Currency__c</fullName>
    <label>Avaliable Credit Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>