force-app/main/default/objects/Account/fields/Avaliable_Credit_Limit_ZAR__c.field-meta.xml
<CustomField>
    <fullName>Avaliable_Credit_Limit_ZAR__c</fullName>
    <label>Avaliable Credit Limit (ZAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>