force-app/main/default/objects/Account/fields/Belonged_Customer_Code__c.field-meta.xml
<CustomField>
    <fullName>Belonged_Customer_Code__c</fullName>
    <formula>IF (ISBLANK(ParentId), ParentCustomerOfSubAcc__r.MDG_Customer_Code__c,Parent.MDG_Customer_Code__c)</formula>
    <label>Belonged Customer Code</label>
    <type>Text</type>
</CustomField>