force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>SAP字段 name3</description>
    <inlineHelpText>SAP Name3</inlineHelpText>
    <label>Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>