force-app/main/default/objects/Account/fields/Brands_Work_with_Hisense__c.field-meta.xml
<CustomField>
    <fullName>Brands_Work_with_Hisense__c</fullName>
    <label>Brands Work with Hisense</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hisense</fullName>
            </value>
            <value>
                <fullName>TOSHIBA</fullName>
            </value>
            <value>
                <fullName>SHARP</fullName>
            </value>
            <value>
                <fullName>Gorenje</fullName>
            </value>
            <value>
                <fullName>ASKO</fullName>
            </value>
            <value>
                <fullName>KELON</fullName>
            </value>
            <value>
                <fullName>Other（OEM）</fullName>
            </value>
            <value>
                <fullName>HITACHI</fullName>
            </value>
            <value>
                <fullName>Ronshen</fullName>
            </value>
            <value>
                <fullName>YORK</fullName>
            </value>
            <value>
                <fullName>Vidda</fullName>
            </value>
            <value>
                <fullName>SANDEN</fullName>
            </value>
            <value>
                <fullName>聚好看</fullName>
            </value>
            <value>
                <fullName>赛维</fullName>
            </value>
            <value>
                <fullName>VIDAA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>