force-app/main/default/objects/Account/fields/Buyer_English_Name__c.field-meta.xml
<CustomField>
    <fullName>Buyer_English_Name__c</fullName>
    <inlineHelpText>Financial required</inlineHelpText>
    <label>Buyer English Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>