force-app/main/default/objects/Account/fields/channel__c.field-meta.xml
<CustomField>
    <fullName>channel__c</fullName>
    <description>渠道23.9.28</description>
    <label>channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>零售</fullName>
            </value>
            <value>
                <fullName>综合</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>