force-app/main/default/objects/Account/fields/Channel_Customer_Categories__c.field-meta.xml
<CustomField>
    <fullName>Channel_Customer_Categories__c</fullName>
    <label>Channel Customer Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Retailer</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Chain</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Overseas e-commerce</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>Domestic e-commerce</label>
            </value>
            <value>
                <fullName>50</fullName>
                <label>Procurement platform</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>