force-app/main/default/objects/Account/fields/Channel_Customer_Subcategories__c.field-meta.xml
<CustomField>
    <fullName>Channel_Customer_Subcategories__c</fullName>
    <label>Channel Customer Subcategories</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Channel_Customer_Categories__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>101</fullName>
                <label>Front channel provider</label>
            </value>
            <value>
                <fullName>102</fullName>
                <label>Electrical retailer</label>
            </value>
            <value>
                <fullName>103</fullName>
                <label>Service provider</label>
            </value>
            <value>
                <fullName>104</fullName>
                <label>Computer digital dealer</label>
            </value>
            <value>
                <fullName>201</fullName>
                <label>Electrical appliance chain</label>
            </value>
            <value>
                <fullName>202</fullName>
                <label>Department store chain</label>
            </value>
            <value>
                <fullName>203</fullName>
                <label>Supermarket</label>
            </value>
            <value>
                <fullName>204</fullName>
                <label>Home DIY chain</label>
            </value>
            <value>
                <fullName>301</fullName>
                <label>pure</label>
            </value>
            <value>
                <fullName>302</fullName>
                <label>Click&amp;Mo</label>
            </value>
            <value>
                <fullName>401</fullName>
                <label>Content e-commerce platform</label>
            </value>
            <value>
                <fullName>402</fullName>
                <label>Shelf e-commerce platform</label>
            </value>
            <value>
                <fullName>403</fullName>
                <label>E-commerce retailer</label>
            </value>
            <value>
                <fullName>501</fullName>
                <label>Purchasing Group</label>
            </value>
            <value>
                <fullName>502</fullName>
                <label>Professional channels</label>
            </value>
            <value>
                <fullName>503</fullName>
                <label>Community group buying</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>