force-app/main/default/objects/Account/fields/Channel_Level__c.field-meta.xml
<CustomField>
    <fullName>Channel_Level__c</fullName>
    <inlineHelpText>Mid-high level channel mainly sells high-end products with a large store area and high-grade decoration</inlineHelpText>
    <label>Channel Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mid-High Level</fullName>
            </value>
            <value>
                <fullName>Non Mid-High Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>