force-app/main/default/objects/Account/fields/Channel_Management_Classification__c.field-meta.xml
<CustomField>
    <fullName>Channel_Management_Classification__c</fullName>
    <label>Channel Management Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>BTOC：经营个人类产品</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>BTOB：经营工程类产品</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>BTOC&amp;BTOB：同时经营个人和工程类产品</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>