force-app/main/default/objects/Account/fields/channel_type__c.field-meta.xml
<CustomField>
    <fullName>channel_type__c</fullName>
    <label>channel type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>连锁渠道</fullName>
                <label>El. Chain</label>
            </value>
            <value>
                <fullName>传统渠道</fullName>
                <label>Traditional Channel</label>
            </value>
            <value>
                <fullName>专业渠道</fullName>
                <label>Specialist Channel</label>
            </value>
            <value>
                <fullName>电商</fullName>
                <label>E-commerce Channel</label>
            </value>
            <value>
                <fullName>OEM客户</fullName>
                <label>OEM Customer</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>