force-app/main/default/objects/Account/fields/City_CN__c.field-meta.xml
<CustomField>
    <fullName>City_CN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Country_State__c.BelongTo_CNProvince__c</field>
            <operation>equals</operation>
            <valueField>$Source.Province_State__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Country_State__c</referenceTo>
    <relationshipLabel>Customers (City)</relationshipLabel>
    <relationshipName>Customers_CNCity</relationshipName>
    <type>Lookup</type>
</CustomField>