force-app/main/default/objects/Account/fields/Client_Type__c.field-meta.xml
<CustomField>
    <fullName>Client_Type__c</fullName>
    <label>Client Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>10	渠道客户（经营）</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>11	企事业单位（消费）</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>12	财务类客户</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>