force-app/main/default/objects/Account/fields/Company_View_Freeze_markers__c.field-meta.xml
<CustomField>
    <fullName>Company_View_Freeze_markers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Company View Freeze markers</label>
    <type>Checkbox</type>
</CustomField>