force-app/main/default/objects/Account/fields/Contract_Rebate_Types__c.field-meta.xml
<CustomField>
    <fullName>Contract_Rebate_Types__c</fullName>
    <label>合同返利种类</label>
    <length>255</length>
    <type>Text</type>
</CustomField>