force-app/main/default/objects/Account/fields/Cooperated_Store_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Cooperated_Store_Quantity__c</fullName>
    <label>Cooperated Store Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>