force-app/main/default/objects/Account/fields/Copy_Of_SGroup__c.field-meta.xml
<CustomField>
    <fullName>Copy_Of_SGroup__c</fullName>
    <label>Copy Of SGroup</label>
    <length>5</length>
    <type>Text</type>
</CustomField>