force-app/main/default/objects/Account/fields/Copy_of_SOffice__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_SOffice__c</fullName>
    <label>Copy of SOffice</label>
    <length>5</length>
    <type>Text</type>
</CustomField>