force-app/main/default/objects/Account/fields/Corporate_Representative__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Representative__c</fullName>
    <label>Corporate Representative</label>
    <length>255</length>
    <type>Text</type>
</CustomField>