force-app/main/default/objects/Account/fields/Credit_Account_Code__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Code__c</fullName>
    <label>Credit Account Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>