force-app/main/default/objects/Account/fields/Credit_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Credit_Account_Name__c</fullName>
    <label>Credit Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>