force-app/main/default/objects/Account/fields/Credit_Currency__c.field-meta.xml
<CustomField>
    <fullName>Credit_Currency__c</fullName>
    <label>Credit Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>