force-app/main/default/objects/Account/fields/Credit_Management__c.field-meta.xml
<CustomField>
    <fullName>Credit_Management__c</fullName>
    <label>Credit Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>1.独立信贷额度</label>
            </value>
            <value>
                <fullName>2</fullName>
                <default>true</default>
                <label>2.共享主户额度</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>