force-app/main/default/objects/Account/fields/credit_rating__c.field-meta.xml
<CustomField>
    <fullName>credit_rating__c</fullName>
    <description>MDG主数据：信用等级</description>
    <label>credit rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A</fullName>
            </value>
            <value>
                <fullName>B</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>D</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>