force-app/main/default/objects/Account/fields/Current_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Current_Modifier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Modifier</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>