force-app/main/default/objects/Account/fields/Customer_Address_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_Address_Type__c</fullName>
    <label>Customer Address Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Store</fullName>
            </value>
            <value>
                <fullName>Delivery Address</fullName>
            </value>
            <value>
                <fullName>Store &amp; Delivery Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>