force-app/main/default/objects/Account/fields/Customer_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Attributes__c</fullName>
    <label>Customer Attributes</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TOP Customer</fullName>
            </value>
            <value>
                <fullName>Non-TOP Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>