force-app/main/default/objects/Account/fields/Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>Customer_Category__c</fullName>
    <label>Customer Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Department store</fullName>
            </value>
            <value>
                <fullName>High-end department store</fullName>
            </value>
            <value>
                <fullName>High-end commercial channel</fullName>
            </value>
            <value>
                <fullName>Supermarket</fullName>
            </value>
            <value>
                <fullName>Club</fullName>
            </value>
            <value>
                <fullName>Electrical chains</fullName>
            </value>
            <value>
                <fullName>Furniture store</fullName>
            </value>
            <value>
                <fullName>Franchisees</fullName>
            </value>
            <value>
                <fullName>Supermarket chains</fullName>
            </value>
            <value>
                <fullName>Buying group</fullName>
            </value>
            <value>
                <fullName>Single store</fullName>
            </value>
            <value>
                <fullName>Outlets</fullName>
            </value>
            <value>
                <fullName>Pure on-line</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>Dealer</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
            </value>
            <value>
                <fullName>Wholesaler</fullName>
            </value>
            <value>
                <fullName>Returned product resale partner</fullName>
            </value>
            <value>
                <fullName>Operator</fullName>
            </value>
            <value>
                <fullName>Open market</fullName>
            </value>
            <value>
                <fullName>Professional AC</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
            </value>
            <value>
                <fullName>Manufacturer &amp; Dealer</fullName>
            </value>
            <value>
                <fullName>Cash customer</fullName>
            </value>
            <value>
                <fullName>others</fullName>
            </value>
            <value>
                <fullName>Rental</fullName>
            </value>
            <value>
                <fullName>Retailer</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>TV shopping</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>