force-app/main/default/objects/Account/fields/Customer_Classification__c.field-meta.xml
<CustomField>
    <fullName>Customer_Classification__c</fullName>
    <label>Customer Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>13</fullName>
                <label>Gran contribuyente</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Autorretenedor</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Agente retencion IVA</label>
            </value>
            <value>
                <fullName>47</fullName>
                <label>simple tributacion</label>
            </value>
            <value>
                <fullName>99</fullName>
                <label>No responsable</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>