force-app/main/default/objects/Account/fields/Customer_dba__c.field-meta.xml
<CustomField>
    <fullName>Customer_dba__c</fullName>
    <label>Customer dba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>