force-app/main/default/objects/Account/fields/Customer_EDI_ID_Type__c.field-meta.xml
<CustomField>
    <fullName>Customer_EDI_ID_Type__c</fullName>
    <label>Customer EDI ID Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>