force-app/main/default/objects/Account/fields/Customer_Extend_Sales__c.field-meta.xml
<CustomField>
    <fullName>Customer_Extend_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>pls search the company code ,such as &apos;8110&apos;</inlineHelpText>
    <label>Customer Extend Sales(Sub Account)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.ParentCustomerOfSubAcc__c</field>
            <operation>equals</operation>
            <valueField>Customer_Extend__c.Customer__c</valueField>
        </filterItems>
        <filterItems>
            <field>Customer_Extend__c.Show_Sales__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Extend__c</referenceTo>
    <relationshipLabel>Customers (Customer Extend Sales(Sub Account))</relationshipLabel>
    <relationshipName>Customers2</relationshipName>
    <type>Lookup</type>
</CustomField>