force-app/main/default/objects/Account/fields/Customer_Extend_Sub_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Extend_Sub_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Optional, select the customer extend of main customer,please search the company code</inlineHelpText>
    <label>Customer Extend(Sub Account)</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Customer_Extend__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.ParentCustomerOfSubAcc__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Extend__c</referenceTo>
    <relationshipLabel>Customers</relationshipLabel>
    <relationshipName>Customers</relationshipName>
    <type>Lookup</type>
</CustomField>